<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".BuyActivity"
    android:background="@drawable/bg"
    android:padding="15dp"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:text="@string/chooseText"
        android:gravity="center"
        android:textColor="@color/white"
        android:textSize="30sp"
        android:textStyle="bold"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/white_round_background">

        <RadioGroup
            android:id="@+id/rgOption"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:orientation="horizontal"
            android:layout_gravity="center"
            android:gravity="center"
            >

            <RadioButton
                android:id="@+id/rdbtnLiter"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/liter"
                android:layout_weight="1"
                android:padding="5dp"
                android:checked="true"
                />
            <RadioButton
                android:id="@+id/rdbtnMoney"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/money"
                android:layout_weight="1"
                android:padding="5dp"/>
            <RadioButton
                android:id="@+id/rdbtnFull"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/full"
                android:layout_weight="1"
                android:padding="5dp"/>
        </RadioGroup>

        <EditText
            android:id="@+id/etAmount"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:padding="15dp"
            android:background="@null"
            android:hint="@string/amountText"
            android:gravity="center"
            android:inputType="numberDecimal"/>

    </LinearLayout>


    <Spinner
        android:id="@+id/spCars"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@drawable/white_round_background"
        android:padding="5dp"
        android:layout_marginTop="30dp"/>

    <Spinner
        android:id="@+id/spPumps"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@drawable/white_round_background"
        android:padding="5dp"
        android:layout_marginTop="30dp"/>

    <Button
        android:id="@+id/btnBuyFuel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btnBuyFuel"
        android:layout_marginTop="50dp"
        android:padding="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginLeft="15dp"
        android:textStyle="bold"
        android:textSize="18sp"/>
</LinearLayout>