<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".BillActivity"
    android:background="@drawable/bg"
    android:padding="15dp"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/yourCar"
        android:textColor="@color/white"
        android:textSize="30sp"
        android:textStyle="bold"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/carNameAndPlateTitle"
        android:textColor="@color/white"
        android:textSize="25sp"
        android:textStyle="bold"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="25dp"/>

    <TextView
        android:id="@+id/tvCarNameAndPlate"
        android:background="@drawable/white_round_background"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:layout_marginLeft="25dp"
        android:textColor="@color/black"
        android:textSize="25sp"
        android:textStyle="bold"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/carFuelType"
        android:textColor="@color/white"
        android:textSize="25sp"
        android:textStyle="bold"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="25dp"/>

    <TextView
        android:id="@+id/tvCarFuelType"
        android:background="@drawable/white_round_background"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:layout_marginLeft="25sp"
        android:textColor="@color/black"
        android:textSize="25sp"
        android:textStyle="bold"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/carCurrentFuelTitle"
        android:textColor="@color/white"
        android:textSize="25sp"
        android:textStyle="bold"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="25dp"/>

    <TextView
        android:id="@+id/tvCarCurrentFuel"
        android:background="@drawable/white_round_background"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:layout_marginLeft="25sp"
        android:textColor="@color/black"
        android:textSize="25sp"
        android:textStyle="bold"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/carCapacityTitle"
                android:textColor="@color/white"
                android:textSize="25sp"
                android:textStyle="bold"
                android:layout_marginTop="5dp"
                android:layout_marginLeft="25dp"/>

            <TextView
                android:id="@+id/tvCarFuelCapacity"
                android:background="@drawable/white_round_background"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:layout_marginLeft="25sp"
                android:textColor="@color/black"
                android:textSize="25sp"
                android:textStyle="bold"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/yourBill"
        android:textColor="@color/white"
        android:layout_marginTop="30dp"
        android:textSize="30sp"
        android:textStyle="bold"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/fuelPrice"
        android:textColor="@color/white"
        android:textSize="25sp"
        android:textStyle="bold"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="25dp"/>

    <TextView
        android:id="@+id/tvFuelPrice"
        android:background="@drawable/white_round_background"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:layout_marginLeft="25sp"
        android:textColor="@color/black"
        android:textSize="25sp"
        android:textStyle="bold"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/boughtFuelAmount"
        android:textColor="@color/white"
        android:textSize="25sp"
        android:textStyle="bold"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="25dp"/>

    <TextView
        android:id="@+id/tvBoughtFuelAmount"
        android:background="@drawable/white_round_background"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:layout_marginLeft="25sp"
        android:textColor="@color/black"
        android:textSize="25sp"
        android:textStyle="bold"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/totalPrice"
        android:textColor="@color/white"
        android:textSize="25sp"
        android:textStyle="bold"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="25dp"/>

    <TextView
        android:id="@+id/tvTotalPrice"
        android:background="@drawable/white_round_background"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:layout_marginLeft="25sp"
        android:textColor="@color/black"
        android:textSize="25sp"
        android:textStyle="bold"/>

    </LinearLayout>
    </ScrollView>
</LinearLayout>